--- a/article/config_ver2.yml
+++ b/article/config_ver2.yml
@@ -24,8 +24,7 @@ description: バージョン2
 #
 # coverfile: カバーページのbody要素内に挿入する内容を記述したファイル名
 coverfile: _cover.html
-# coverimage: 表紙用画像ファイル
-coverimage: cover2.jpg
+coverimage: cover2.png
 # 固有IDに使用するドメイン
 urnid: http://tatsu-zine.com/books/review-sample-book/1.0.0/
 # CSSファイル (yamlファイルおよびRe:VIEWファイルを置いたディレクトリにあること
